syntax = "proto3";

package protocols.navigation;

message Planning {
    oneof type {
        DiscretizedPath discretized_path = 1;
        GoToPoint go_to_point = 2;
        RotateInPoint rotate_in_point = 3;
        RotateOnSelf rotate_on_self = 4;
    }
    PeripheralActuation peripheral_actuation = 2;
}
